--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
     <meta name="description" content="The HTML5 Herald">
     <meta name="author" content="SitePoint">
 
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link rel="stylesheet" href="./main.css">
 
 </head>
 
 <body>
-    <script src="js/scripts.js"></script>
+    <div id="frame">
+
+    </div>
 </body>
+<footer>
+    <script src="./main.js"></script>
+    <script src="./p5/p5.min.js"></script>
+</footer>
 
 </html>
